@@ -3,9 +3,9 @@
 #' \tabular{ll}{
 #' Package: \tab afex\cr
 #' Type: \tab Package\cr
-#' Version: \tab 0.3-27\cr
+#' Version: \tab 0.3-29\cr
 #' Date: \tab 2012-08-20\cr
-#' Depends: \tab R (>= 2.14.0), car, lme4, pbkrtest, reshape2, stringr\cr
+#' Depends: \tab R (>= 2.14.0), car, lme4, pbkrtest, reshape2, stringr, coin\cr
 #' Encoding: \tab UTF-8\cr
 #' License: \tab GPL (>=3)\cr
 #' URL: \tab http://www.psychologie.uni-freiburg.de/Members/singmann/R/afex\cr
